--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body{
     padding-top: 60px;
     padding-bottom: 60px; /*might need to change later*/
 }
+nav {
+    width: 95%;
+    /* margin-left: 60px;
+    margin-right: 60px; */
+}
 nav ul{
     list-style: none;
     padding: 0;
@@ -27,9 +32,34 @@ nav ul li{
     text-decoration: none;
     color:#231F20;
     box-sizing: border-box;
-    width: 350px;
+    width: 380px;
     display: block;
-    font-size: 60px;
+    font-size: 50px;
     font-weight: bold;
     text-align: center;
 }
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box {
+    border: 2px solid #231F20;
+    padding: 45px;
+    margin: 20px;
+    width: 95%;
+}
+.name{
+    width: 90%;
+    font-size: 140px;
+    font-weight: bold;
+}
+.intro{
+    width: 1000px;
+    font-size: 45px;
+    font-weight:normal;
+}
+/* .image1{
+    width: 1000px;
+    height: 1000px;
+} */
