--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body{
 }
 nav {
     width: 95%;
+    display: flex;
+    justify-content: space-around;
     /* margin-left: 60px;
     margin-right: 60px; */
 }
@@ -32,7 +34,7 @@ nav ul li{
     text-decoration: none;
     color:#231F20;
     box-sizing: border-box;
-    width: 380px;
+    width: 300px;
     display: block;
     font-size: 50px;
     font-weight: bold;
@@ -49,9 +51,40 @@ section {
     margin: 20px;
     width: 95%;
 }
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+@media (max-width: 1200px) {
+    .content {
+        flex-direction: column;
+    }
+    .link-hub{
+        margin-top: 0;
+    }
+}
+.link-hub{
+    margin-top: -50px;
+}
+.link-hub a i{
+    font-size: 50px;
+    text-decoration: none;
+    margin-right: 15px;
+    color: #231F20;
+}
+.link-hub button {
+    background-color: transparent;
+    margin-right: 15px;
+    border: none;
+}
+.link-hub button i{
+    font-size: 50px;
+    color:#231F20;
+}
 .name{
     width: 90%;
-    font-size: 140px;
+    font-size: 125px;
     font-weight: bold;
 }
 .intro{
@@ -59,7 +92,33 @@ section {
     font-size: 45px;
     font-weight:normal;
 }
-/* .image1{
-    width: 1000px;
-    height: 1000px;
-} */
+.image1{
+    width: 900px;
+    height: 900px;
+}
+.contact-title{
+    width: 90%;
+    font-size: 125px;
+    font-weight: bold;
+}
+.contact-bottom button{
+    display: inline-block;
+    background-color: #169D53;
+    border: 0;
+    margin: 15px;
+    padding: 15px;
+    width: 200px;
+}
+.contact-bottom form{
+    width: 100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background-color: white;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 6px;
+    font-style: 18px;
+}
