--- a/style-2.css
+++ b/style-2.css
@@ -15,6 +15,7 @@ body{
         #FFB996 100%
     );
 }
+/*navigation bar styling*/
 nav {
     width: 48%;
     display: flex;
@@ -45,6 +46,7 @@ nav ul li{
 #back-change:hover {
     background-color: #E7DFD8;
 }
+/*This is the main container for all pages except the resume and about pages*/
 .content {
     display: flex;
     flex-direction: row;
@@ -60,6 +62,26 @@ nav ul li{
 .content div {
     flex-direction: column;
 }
+.point{
+    width: 100%;
+    font-size: 3.5vw;
+    font-weight:lighter;
+    margin-left: 10px;
+    margin-top: 20px;
+}
+.discription{
+    font-size: 1.9vw;
+    font-weight:lighter;
+}
+.intro{
+    width: 100%;
+    text-align: center;
+    font-size: 3vw;
+    font-weight:normal;
+    margin-bottom: 50px;
+    padding: 30px;
+}
+/*This is the main container for the resume and about page*/
 .content-resume-about {
     display: flex;
     flex-direction: column;
@@ -73,12 +95,11 @@ nav ul li{
     padding: 40px;
     flex-direction: column;
 }
-.resume-img{
-    width:auto;
-    width: 100%;
-    height:auto;
-    height: 100%;
+.content div ul{
+    width: 90%;
+    margin-bottom: 50px;
 }
+/*The following allows the vertical split and formating for the resume page*/
 .style-2-split {
     display: flex;
     flex-direction: row;
@@ -100,6 +121,7 @@ nav ul li{
     margin-bottom: 45px;
     font-size: 1.8vw;
 }
+/*These are the containers for the about pages.*/
 .about-image-text-container{
     display: flex;
     flex-direction: row;
@@ -110,7 +132,6 @@ nav ul li{
 }
 .about-image-text-container section, .about-image-text-container image, .about-image-text-container-2 section, .about-image-text-container-2 img{
     flex: 1; 
-    /* max-width: 50%; */
     box-sizing: border-box;
     padding:40px; 
 }
@@ -124,6 +145,7 @@ nav ul li{
     font-size: 2.2vw;
     font-weight:lighter;
 }
+/*All the titles used*/
 .title1, .title3, .title2{
     width: 100%;
     text-align: center;
@@ -150,31 +172,9 @@ nav ul li{
     font-weight: bold;
     font-size: 6vw;
 }
-.content div ul{
-    width: 90%;
-    margin-bottom: 50px;
-}
+/*all the images and icon styling used*/
 i {
     margin-left: 20px;
-}
-.point{
-    width: 100%;
-    font-size: 3.5vw;
-    font-weight:lighter;
-    margin-left: 10px;
-    margin-top: 20px;
-}
-.discription{
-    font-size: 1.9vw;
-    font-weight:lighter;
-}
-.intro{
-    width: 100%;
-    text-align: center;
-    font-size: 3vw;
-    font-weight:normal;
-    margin-bottom: 50px;
-    padding: 30px;
 }
 .image1{
     width: 30%;
@@ -213,6 +213,13 @@ i {
     height: 50%;
     padding: 45px;
 }
+.resume-img{
+    width:auto;
+    width: 100%;
+    height:auto;
+    height: 100%;
+}
+/*link hub stying on home page*/
 .link-hub{
     margin-top: -50px;
     width: 50%;
@@ -232,10 +239,12 @@ i {
     font-size: 5vw;
     color:#231F20;
 }
+/*needed for links to be displayed when viewing html code only*/
 .html_view{
     display: none;
     visibility: hidden;
 }
+/*contact section for the home page*/
 .contact-title{
     width: 50%;
     text-align: center;
